# FidelityFX-SDK

./: .editorconfig  .gitignore  .gitlab-ci.yml  BuildAllCauldronEffectsSolution.bat  BuildAllCauldronEffectsSolutionDll.bat  BuildAllNativeEffectsSolution.bat  BuildAllNativeEffectsSolutionDll.bat  BuildBlurSolution.bat  BuildCACAOSolution.bat  BuildCASSolution.bat  BuildCauldronSolution.bat  BuildDOFSolution.bat  BuildFSRSolution.bat  BuildFSRSolutionNative.bat  BuildFSRSolutionNativeDll.bat  BuildHybridReflectionsSolution.bat  BuildHybridShadowsSolution.bat  BuildLPMSolution.bat  BuildLensSolution.bat  BuildParallelSortSolution.bat  BuildSPDSolution.bat  BuildSSSRSolution.bat  BuildSamplesSolutionDX12.bat  BuildSamplesSolutionVK.bat  BuildVRSSolution.bat  CMakeLists.txt  CleanAllGeneratedData.bat  ClearMediaCache.bat  Doxyfile  LICENSE.txt  SECURITY.md  Third_party_notices.txt  UpdateMedia.bat  common.cmake  readme.md  sample.cmake
docs/: index.md  (+1 more)
framework/cauldron/framework/: CMakeLists.txt
framework/cauldron/framework/config/: cauldronconfig.json
framework/cauldron/framework/src/: CMakeLists.txt
samples/: CMakeLists.txt  validation_remap.h
samples/blur/: CMakeLists.txt  blurrendermodule.cpp  blurrendermodule.h
samples/blur/config/: blurconfig.json
samples/blur/shaders/: blur_baseline_filters_cs.hlsl  blur_compare_filters_cs.hlsl  blur_gaussian_blur_kernels.h
samples/breadcrumbs/: breadcrumbsrendermodule.cpp
samples/brixelizergi/: brixelizergirendermodule.cpp
samples/cacao/: CMakeLists.txt  cacaorendermodule.cpp  cacaorendermodule.h  cacaosample.cpp  cacaosample.h
samples/cacao/config/: cacaoconfig.json
samples/cacao/shaders/: display_ssao.hlsl
samples/cas/: CMakeLists.txt  casrendermodule.cpp  casrendermodule.h
samples/cas/config/: casconfig.json
samples/dof/: CMakeLists.txt  dofrendermodule.cpp  dofrendermodule.h
samples/dof/config/: dofconfig.json
samples/ffx_cauldron/: CMakeLists.txt  CMakeShadersBlur.txt  CMakeShadersCACAO.txt  CMakeShadersCAS.txt  CMakeShadersClassifier.txt  CMakeShadersDOF.txt  CMakeShadersDenoiser.txt  CMakeShadersFSR1.txt  CMakeShadersFSR2.txt  CMakeShadersLENS.txt  CMakeShadersLPM.txt  CMakeShadersParallelSort.txt  CMakeShadersSPD.txt  CMakeShadersSSSR.txt  CMakeShadersVRS.txt  GPUTimestamps.cpp  GPUTimestamps.h  cpu_time_event_rate.cpp  cpu_time_event_rate.h  ffx_cauldron.cpp  ffx_cauldron.h
samples/ffx_cauldron/shaders/blur/: ffx_blur_pass.glsl  ffx_blur_pass.hlsl
samples/ffx_cauldron/shaders/cacao/: ffx_cacao_apply_non_smart_half_pass.glsl  ffx_cacao_apply_non_smart_half_pass.hlsl  ffx_cacao_apply_non_smart_pass.glsl  ffx_cacao_apply_non_smart_pass.hlsl  ffx_cacao_apply_pass.glsl  ffx_cacao_apply_pass.hlsl  ffx_cacao_clear_load_counter_pass.glsl  ffx_cacao_clear_load_counter_pass.hlsl  ffx_cacao_edge_sensitive_blur_1_pass.glsl  ffx_cacao_edge_sensitive_blur_1_pass.hlsl  ffx_cacao_edge_sensitive_blur_2_pass.glsl  ffx_cacao_edge_sensitive_blur_2_pass.hlsl  ffx_cacao_edge_sensitive_blur_3_pass.glsl  ffx_cacao_edge_sensitive_blur_3_pass.hlsl  ffx_cacao_edge_sensitive_blur_4_pass.glsl  ffx_cacao_edge_sensitive_blur_4_pass.hlsl  ffx_cacao_edge_sensitive_blur_5_pass.glsl  ffx_cacao_edge_sensitive_blur_5_pass.hlsl  ffx_cacao_edge_sensitive_blur_6_pass.glsl  ffx_cacao_edge_sensitive_blur_6_pass.hlsl  ffx_cacao_edge_sensitive_blur_7_pass.glsl  ffx_cacao_edge_sensitive_blur_7_pass.hlsl  ffx_cacao_edge_sensitive_blur_8_pass.glsl  (+39 more)
samples/fsr/: CMakeLists.txt  fsr1rendermodule.cpp  fsr1rendermodule.h  fsr2rendermodule.cpp  fsr2rendermodule.h  fsr3rendermodule.cpp  fsr3rendermodule.h  fsr3upscalerendermodule.cpp  fsr3upscalerendermodule.h  fsrrendermodule.cpp  fsrrendermodule.h  fsrsample.cpp  fsrsample.h  upscalerendermodule.cpp  upscalerendermodule.h
samples/fsr/HLSLCompile/: HLSLShaderCompiler.cpp  HLSLShaderCompiler.h  shadercompiler.cpp  shadercompiler.h
samples/fsr/config/: fsrconfig.json
samples/fsr/shaders/: HudLessBlit.hlsl  upscalecommon.h  upscalecs.hlsl
samples/fsrapi/: CMakeLists.txt  fsrapirendermodule.cpp  fsrapirendermodule.h
samples/fsrapi/config/: fsrapiconfig.json
samples/hybridreflections/: CMakeLists.txt  hybridreflectionsrendermodule.cpp  hybridreflectionsrendermodule.h
samples/hybridreflections/config/: hybridreflectionsconfig.json
samples/hybridreflections/shaders/: Common.hlsl  Declarations.h  Intersect.hlsl  apply_reflections.hlsl  common_types.h  copy_depth_and_reset_buffers.hlsl  copy_depth_and_reset_debug.hlsl  ffx_sssr_intersect.h  prepare_blue_noise.hlsl  prepare_indirect_args_hw.hlsl  prepare_indirect_args_hybrid.hlsl  primary_ray_tracing.hlsl  sample_ggx_vndf.h
samples/hybridshadows/: CMakeLists.txt  hybridshadowsrendermodule.cpp  hybridshadowsrendermodule.h
samples/hybridshadows/config/: hybridshadowsconfig.json
samples/hybridshadows/shaders/: copydebugraytracing.hlsl  copydepth.hlsl  debugtiles.hlsl  resolveraytracing.hlsl  traceshadows.hlsl
samples/lens/: CMakeLists.txt  lensrendermodule.cpp  lensrendermodule.h
samples/lens/config/: lensconfig.json
samples/lpm/: CMakeLists.txt  lpmrendermodule.cpp  lpmrendermodule.h
samples/lpm/config/: lpmconfig.json
samples/parallelsort/: CMakeLists.txt  parallelsortrendermodule.cpp  parallelsortrendermodule.h
samples/parallelsort/config/: parallelsortconfig.json
samples/parallelsort/shaders/: parallelsort_common.h  parallelsort_cs.hlsl  parallelsort_verify.hlsl
samples/spd/: CMakeLists.txt  spdrendermodule.cpp  spdrendermodule.h
samples/spd/config/: spdconfig.json
samples/spd/shaders/: spd_common.h  spd_cs_downsampler.hlsl  spd_ps_downsampler.hlsl  spd_verify_results.hlsl
samples/sssr/: CMakeLists.txt  sssrrendermodule.cpp  sssrrendermodule.h
samples/sssr/config/: sssrconfig.json
samples/sssr/shaders/: sssr_apply_reflections.hlsl  sssr_apply_reflections_common.h
samples/vrs/: CMakeLists.txt  vrsrendermodule.cpp  vrsrendermodule.h
samples/vrs/config/: vrsconfig.json
samples/vrs/shaders/: VrsOverlay.hlsl  motionvectorsps.hlsl
sdk/tools/ffx_shader_compiler/: CMakeLists.txt  GenerateSolution.bat
(+1598 files in other folders)
